Fix venueBox z-index

--- a/less/views/order2/uis/boxes/venue_box.less
+++ b/less/views/order2/uis/boxes/venue_box.less
@@ -58,6 +58,7 @@
         top: 0px;
         left: 0px;
         z-index: 100;
+        -webkit-transform: translate3d(0,0,0);
         background-color: rgba(115, 115, 115, .7);
 
         > .product-text, > .product-date, > .product-consumed-icon-section {
@@ -118,6 +119,8 @@
         -webkit-transform: translateZ(0);
         -webkit-transition: -webkit-transform 200ms ease-in-out;
 
+        z-index: 90;
+
         > .venue-product {
 
           position: absolute;
@@ -129,6 +132,7 @@
           background-size: 100% 100%;
           background-repeat: no-repeat;
 
+          z-index: 90;
 
 
         }
